<resources>
    <string name="app_name">TMDB Application</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_movies">Movies</string>
    <string name="title_tvs">TV Shows</string>
    <string name="title_trending">Trending</string>
    <string name="title_discover">Discover</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="review">Review</string>
    <string name="no_review">No review yet</string>
    <string name="see_all_review">See all review</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Movie / TV Show</string>
    <string name="empty_search_result">No results for <b>%s</b></string>
    <string name="general_error">Unable to get data, please try again later</string>
    <string name="empty_favorite_media">No favorite Movie / TV Show</string>
</resources>